--- a/style.css
+++ b/style.css
@@ -1,45 +1,48 @@
-:root{
-    --bg:#C4E1E6;
-    --card:#A4CCD9;
-    --text:#EBFFD8;
-    --accent:#8DBCC7;
+:root {
+  --bg:#C4E1E6;
+  --card:#A4CCD9;
+  --text:#1e619c;
+  --accent:#8DBCC7;
 }
 
 body {
-    background: var(--bg);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Sans-Serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+  background: var(--bg);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, Sans-Serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
 }
 
-#Weather-container {
-    background: rgba(255, 255, 255, 0.3);
-    max-width: 400px;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    text-align: center;
-    
-    h2, label, p {
-        color: #1e619c;
-        margin: 8px 0;
-    }
-    
-    input {
-        width: calc(100% - 16px);
-        padding: 8px;
-        box-sizing: border-box;
-        border-radius: 10px;
-        border: 1px solid white;
-        margin-top: 20px;
-    }
-    
-    button {
+#weather-container {
+  background: rgba(255, 255, 255, 0.3);
+  max-width: 400px;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
+}
+
+#weather-container h2,
+#weather-container label,
+#weather-container p {
+  color: var(--text);
+  margin: 8px 0;
+}
+
+#weather-container input {
+  width: calc(100% - 16px);
+  padding: 8px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: 1px solid white;
+  margin-top: 20px;
+}
+
+#weather-container button {
   background: var(--accent);
   color: white;
   padding: 10px;
@@ -51,9 +54,9 @@ body {
   font-size: 15px;
 }
 
-button:hover {
+#weather-container button:hover {
   background: #1e619c;
-}  
+}
 
 #temp-div p {
   font-size: 60px;
@@ -99,6 +102,4 @@ button:hover {
 #hourly-heading {
   color: #fff;
   margin-top: 10px;
-}
-    
 }
